[gd_scene load_steps=3 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://src/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://game_board_scene" path="res://scenes/game_board.tscn" id="2_game_board"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.15, 0.17, 0.22, 1)

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 0
offset_left = 340.0
offset_top = 180.0
offset_right = 940.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 48
text = "Revolving Match-3"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContainer"]
layout_mode = 0
offset_left = 340.0
offset_top = 250.0
offset_right = 940.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.9, 0.45, 0.14, 1)
text = "Rust Edition"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer"]
layout_mode = 0
offset_left = 490.0
offset_top = 350.0
offset_right = 790.0
offset_bottom = 410.0
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 0
offset_left = 490.0
offset_top = 430.0
offset_right = 790.0
offset_bottom = 490.0
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="GameContainer" type="Node2D" parent="."]
visible = false

[node name="GameBoard" parent="GameContainer" instance=ExtResource("2_game_board")]
